Closed Bug 642319 Opened 14 years ago Closed 14 years ago

TI: Assertion failure: isFunction, at jsinfer.h:427

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Unassigned)

References

Details

(Keywords: assertion, testcase, Whiteboard: fixed-in-jaegermonkey)

The following test case (run with -n -a) asserts on TI tip (tested on 64 bit): test(); function test() { function f() { function test( ) { summary( summary, test, false ); } } f.__proto__ = this; } gc(); test();
Fix unnecessary (and incorrect, thanks to mutable __proto__) cast. http://hg.mozilla.org/projects/jaegermonkey/rev/8b5eb3c09698
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
A testcase for this bug was automatically identified at js/src/jit-test/tests/basic/bug642319.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.