[INFER] Avoid unnecessary cast, bug 642319.