js/src/jit-test/tests/basic/bug642319.js
@@ -1,0 +1,10 @@
+
+test();
+function test() {
+        function f() {
+                function test( ) { summary( summary, test, false ); }
+        }
+        f.__proto__ = this;
+}
+gc();
+test();
